add fake white background for desktop view

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <div id="wrapper-frame"></div>
     <div id="wrapper-logo"></div>
     <div id="wrapper-menus"></div>
+    <div id="wrapper-fakebackground"></div>
 </body>
 </html>
